# segmentation

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  escherize.ipynb  placement.ipynb  playground.ipynb  pyproject.toml  replace.ipynb
segmentation/: cutting.py  download_dataset.py  escherize.py  extract_good_cutouts.py  gcp.py  hash_index.py  loading.py  optimization.py  placement.py  shapes.py  visualization.py
