[tool.poetry]
name = "segmentation"
version = "0.1.0"
description = ""
authors = ["Václav Volhejn <vaclav.volhejn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pycocotools = "^2.0.7"
pillow = "^10.1.0"
tqdm = "^4.66.1"
jupyter = "^1.0.0"
scikit-image = "^0.22.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
